objects/SiteContracts__c/fields/Price_Book_Id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Id__c</fullName>
    <label>Price Book Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>