objects/SiteContracts__c/fields/Price_Book_IdFormula__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_IdFormula__c</fullName>
    <formula>IF(Price_Book__c &lt;&gt; &apos;&apos;, Price_Book__c, Site__r.Price_Book__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This shows the price book ID that will be used when we create the opportunity.</inlineHelpText>
    <label>Price Book Id (Customer / Site)</label>
    <type>Text</type>
</CustomField>