objects/SiteContracts__c/fields/Price_Book_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Name__c</fullName>
    <formula>IF (Site__r.Price_Book__c&lt;&gt; &quot;&quot;, Site__r.Price_Book__r.Name,
Site__r.Parent.Price_Book__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Name</label>
    <type>Text</type>
</CustomField>