objects/SiteContracts__c/fields/Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Notes__c</fullName>
    <inlineHelpText>This field will be on the opportunities for this Site contract to guide the person doing the pricing.</inlineHelpText>
    <label>Pricing Notes</label>
    <type>TextArea</type>
</CustomField>