objects/SiteContracts__c/fields/PRIVATE_NOTES__c.field-meta.xml
<CustomField>
    <fullName>PRIVATE_NOTES__c</fullName>
    <label>PRIVATE NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>