objects/SiteContracts__c/fields/PTE__c.field-meta.xml
<CustomField>
    <fullName>PTE__c</fullName>
    <label>PTE</label>
    <length>100</length>
    <type>Text</type>
</CustomField>