objects/SiteContracts__c/fields/PTE_QTY__c.field-meta.xml
<CustomField>
    <fullName>PTE_QTY__c</fullName>
    <label>PTE QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>