objects/SiteContracts__c/fields/Pump_Pri__c.field-meta.xml
<CustomField>
    <fullName>Pump_Pri__c</fullName>
    <label>Pump Pri</label>
    <length>100</length>
    <type>Text</type>
</CustomField>