objects/SiteContracts__c/fields/Pump_Pri_Serial__c.field-meta.xml
<CustomField>
    <fullName>Pump_Pri_Serial__c</fullName>
    <label>Pump Pri Serial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>