objects/SiteContracts__c/fields/Pump_Sec__c.field-meta.xml
<CustomField>
    <fullName>Pump_Sec__c</fullName>
    <label>Pump Sec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>