objects/SiteContracts__c/fields/Pump_Sec_Serial__c.field-meta.xml
<CustomField>
    <fullName>Pump_Sec_Serial__c</fullName>
    <label>Pump Sec Serial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>