objects/SiteContracts__c/fields/Pump_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>Pump_Tertiary__c</fullName>
    <label>Pump Tertiary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>