objects/SiteContracts__c/fields/Pump_Tertiary_Serial__c.field-meta.xml
<CustomField>
    <fullName>Pump_Tertiary_Serial__c</fullName>
    <label>Pump Tertiary Serial</label>
    <length>100</length>
    <type>Text</type>
</CustomField>