objects/SiteContracts__c/fields/Purchase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Number__c</fullName>
    <inlineHelpText>If there is a specific purchase order for this entire contract, enter it here. This will then transfer to the visit, service or reactive sheet, and opportunity.</inlineHelpText>
    <label>Purchase Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>