objects/SiteContracts__c/fields/Purchase_Order_on_Parent_Site_or_Ctrct__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_on_Parent_Site_or_Ctrct__c</fullName>
    <formula>IF ( Purchase_Order_Number__c &lt;&gt; &quot;&quot;, Purchase_Order_Number__c, 
IF ( Site__r.Current_Purchase_Order_No__c &lt;&gt; &quot;&quot;,  Site__r.Current_Purchase_Order_No__c ,  Site__r.Parent_Purchase_Order_No__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Order on Parent, Site or Ctrct</label>
    <type>Text</type>
</CustomField>