objects/SiteContracts__c/fields/Purchase_Order_Required__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required__c</fullName>
    <inlineHelpText>Please select whether a purchase order is required for this Site Contract</inlineHelpText>
    <label>Purchase Order Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>