objects/SiteContracts__c/fields/Purchase_Order_Required_formula__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Required_formula__c</fullName>
    <formula>TEXT( Purchase_Order_Required__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PO Required for Parent, Site or Contract</label>
    <type>Text</type>
</CustomField>