objects/SiteContracts__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote No.</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>