objects/SiteContracts__c/fields/READERS__c.field-meta.xml
<CustomField>
    <fullName>READERS__c</fullName>
    <label>READERS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>