objects/SiteContracts__c/fields/READERS_QTY__c.field-meta.xml
<CustomField>
    <fullName>READERS_QTY__c</fullName>
    <label>READERS QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>