objects/SiteContracts__c/fields/Reason_Dormant_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_Dormant_On_Hold__c</fullName>
    <inlineHelpText>Please enter the reason for the change.</inlineHelpText>
    <label>Reason Dormant / On Hold</label>
    <type>TextArea</type>
</CustomField>