objects/SiteContracts__c/fields/REELS__c.field-meta.xml
<CustomField>
    <fullName>REELS__c</fullName>
    <label>REELS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>