objects/SiteContracts__c/fields/REELS_QTY__c.field-meta.xml
<CustomField>
    <fullName>REELS_QTY__c</fullName>
    <label>REELS QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>