objects/SiteContracts__c/fields/Relays__c.field-meta.xml
<CustomField>
    <fullName>Relays__c</fullName>
    <label>Relays</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>