objects/SiteContracts__c/fields/Relays_QTY__c.field-meta.xml
<CustomField>
    <fullName>Relays_QTY__c</fullName>
    <label>Relays QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>