objects/SiteContracts__c/fields/Remote_Indicator_Qty__c.field-meta.xml
<CustomField>
    <fullName>Remote_Indicator_Qty__c</fullName>
    <label>Remote Indicator Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>