objects/SiteContracts__c/fields/Remote_LED__c.field-meta.xml
<CustomField>
    <fullName>Remote_LED__c</fullName>
    <label>Remote LED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>