objects/SiteContracts__c/fields/Remote_LED_QTY__c.field-meta.xml
<CustomField>
    <fullName>Remote_LED_QTY__c</fullName>
    <label>Remote LED QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>