objects/SiteContracts__c/fields/RISERS__c.field-meta.xml
<CustomField>
    <fullName>RISERS__c</fullName>
    <label>RISERS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>