objects/SiteContracts__c/fields/RISERS_QTY__c.field-meta.xml
<CustomField>
    <fullName>RISERS_QTY__c</fullName>
    <label>RISERS QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>