objects/SiteContracts__c/fields/S_S_QTY__c.field-meta.xml
<CustomField>
    <fullName>S_S_QTY__c</fullName>
    <label>S/S QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>