objects/SiteContracts__c/fields/Sales_Contract__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose the Sales Contract to which this Site Contract relates</inlineHelpText>
    <label>Sales Contract</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Sales_Contract__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Site__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Contract__c</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>