objects/SiteContracts__c/fields/Sales_Contract_Specific_In__c.field-meta.xml
<CustomField>
    <fullName>Sales_Contract_Specific_In__c</fullName>
    <formula>Sales_Contract__r.Special_Technician_Instructions__c &amp; Sales_Contract__r.Sales_Contract_Additional_Instructions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Contract Specific In</label>
    <type>Text</type>
</CustomField>