objects/SiteContracts__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order No</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>