objects/SiteContracts__c/fields/SC_Call_out_Charge_4_Hour_Response__c.field-meta.xml
<CustomField>
    <fullName>SC_Call_out_Charge_4_Hour_Response__c</fullName>
    <description>Service Charge Call out Charge - 4 Hour Response</description>
    <formula>IF (X4_Hour_Reactive_Call_Out_Charge__c &lt;&gt; NULL, X4_Hour_Reactive_Call_Out_Charge__c,Sales_Contract__r.Call_Out_Charge_4_Hour_Response__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Call out Charge - 4 Hour Response</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>