objects/SiteContracts__c/fields/SC_Call_Out_Charge_Incl_First_Hour__c.field-meta.xml
<CustomField>
    <fullName>SC_Call_Out_Charge_Incl_First_Hour__c</fullName>
    <description>Service Charge Call Out Charge Incl. First Hour</description>
    <formula>IF(Call_Out_Charge_Incl_First_Hour__c &lt;&gt; NULL,Call_Out_Charge_Incl_First_Hour__c, Sales_Contract__r.Call_Out_OOH_Charge_incl_First_Hour__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Call Out Charge Incl. First Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>