objects/SiteContracts__c/fields/SC_Call_Out_Charge_Per_Hour_Thereafter__c.field-meta.xml
<CustomField>
    <fullName>SC_Call_Out_Charge_Per_Hour_Thereafter__c</fullName>
    <description>Service Charge Call Out Charge Per Hour Thereafter</description>
    <formula>IF (Call_Out_Charge_Per_Hour_Thereafter__c  &lt;&gt; NULL,Call_Out_Charge_Per_Hour_Thereafter__c, Sales_Contract__r.Call_Out_Charge_Per_Hour_Thereafter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Call Out Charge Per Hour Thereafter</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>