objects/SiteContracts__c/fields/SC_Call_Out_OOH_Charge_Per_Hour_Thereaft__c.field-meta.xml
<CustomField>
    <fullName>SC_Call_Out_OOH_Charge_Per_Hour_Thereaft__c</fullName>
    <description>Service Charge Call Out OOH Charge Per Hour Thereaft</description>
    <formula>IF(Call_Out_OOH_Charge_Per_Hour_Thereafter__c &lt;&gt; null,Call_Out_OOH_Charge_Per_Hour_Thereafter__c, Sales_Contract__r.Call_Out_OOH_Charge_Per_Hour_Thereafter__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Call Out OOH Charge Per Hour Thereaft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>