objects/SiteContracts__c/fields/SC_Labour_Charge__c.field-meta.xml
<CustomField>
    <fullName>SC_Labour_Charge__c</fullName>
    <description>Service Charge Labour Charge</description>
    <formula>IF(Labour_Charge__c &lt;&gt; NULL,Labour_Charge__c, Sales_Contract__r.Labour_Charge__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Labour Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>