objects/SiteContracts__c/fields/SC_Labour_OOH_Charge__c.field-meta.xml
<CustomField>
    <fullName>SC_Labour_OOH_Charge__c</fullName>
    <description>Service Charge Labour OOH Charge</description>
    <formula>IF(Labour_Out_of_Hour_Charge__c &lt;&gt; NULL,Labour_Out_of_Hour_Charge__c, Sales_Contract__r.Labour_OOH_Charge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Labour OOH Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>