objects/SiteContracts__c/fields/SC_Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>SC_Office_Notes__c</fullName>
    <formula>Sales_Contract__r.OFFICE_NOTES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Office Notes</label>
    <type>Text</type>
</CustomField>