objects/SiteContracts__c/fields/SC_Per_Emergency_Light__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Emergency_Light__c</fullName>
    <description>Service Charge Per Emergency Light</description>
    <formula>IF (Per_Emergency_Light__c &lt;&gt; NULL, Per_Emergency_Light__c, Sales_Contract__r.Per_Emergency_Light__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Emergency Light</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>