objects/SiteContracts__c/fields/SC_Per_Fire_Blanket__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Fire_Blanket__c</fullName>
    <description>Service Charge Per Fire Blanket</description>
    <formula>IF (Charge_Per_Fire_Blanket__c &lt;&gt; NULL, Charge_Per_Fire_Blanket__c, Sales_Contract__r.Per_Fire_Blanket__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Fire Blanket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>