objects/SiteContracts__c/fields/SC_Per_Fire_Extinguisher__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Fire_Extinguisher__c</fullName>
    <description>Service Charge Per Fire Extinguisher</description>
    <formula>IF (PER_ITEM__c &lt;&gt; Null, PER_ITEM__c,Sales_Contract__r.Per_Fire_Extinguisher__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Fire Extinguisher</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>