objects/SiteContracts__c/fields/SC_Per_Hose_Reel__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Hose_Reel__c</fullName>
    <description>Service Charge Per Hose Reel</description>
    <formula>IF(Per_Hose_Reel__c &lt;&gt; NULL, Per_Hose_Reel__c, Sales_Contract__r.Per_Hose_Reel__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Hose Reel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>