objects/SiteContracts__c/fields/SC_Per_Hydrant__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Hydrant__c</fullName>
    <description>Service Charge Per Hydrant</description>
    <formula>IF ( Charge_per_Hydrant__c &lt;&gt; NULL, Charge_per_Hydrant__c, Sales_Contract__r.Per_Hydrant__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Hydrant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>