objects/SiteContracts__c/fields/SC_Per_Portable_Appliance__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Portable_Appliance__c</fullName>
    <description>Service Charge Per Portable Appliance</description>
    <formula>IF (Per_Portable_Appliance__c &lt;&gt; NULL, Per_Portable_Appliance__c, Sales_Contract__r.Per_Portable_Appliance__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Portable Appliance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>