objects/SiteContracts__c/fields/SC_Per_Riser__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Riser__c</fullName>
    <description>Service Charge Per Riser</description>
    <formula>IF (  Charge_Per_Riser__c &lt;&gt; NULL,  Charge_Per_Riser__c, Sales_Contract__r.Per_Riser__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Riser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>