objects/SiteContracts__c/fields/SC_Per_Suppression_System__c.field-meta.xml
<CustomField>
    <fullName>SC_Per_Suppression_System__c</fullName>
    <description>Service Charge Per Suppression System</description>
    <formula>IF (Per_Suppression_System__c &lt;&gt; NULL, Per_Suppression_System__c, Sales_Contract__r.Per_Suppression_System__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Per Suppression System</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>