objects/SiteContracts__c/fields/SC_Pricing_Notes__c.field-meta.xml
<CustomField>
    <fullName>SC_Pricing_Notes__c</fullName>
    <formula>IF( Pricing_Notes__c &lt;&gt; NULL, Pricing_Notes__c, Sales_Contract__r.Pricing_Notes__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Pricing Notes</label>
    <type>Text</type>
</CustomField>