objects/SiteContracts__c/fields/SC_Private_Notes__c.field-meta.xml
<CustomField>
    <fullName>SC_Private_Notes__c</fullName>
    <formula>Sales_Contract__r.PRIVATE_NOTES__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Private Notes</label>
    <type>Text</type>
</CustomField>