objects/SiteContracts__c/fields/SC_Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>SC_Service_Charge__c</fullName>
    <description>Service Charge Service Charge</description>
    <formula>IF (Service_Charge__c &lt;&gt; NULL, Service_Charge__c,
 Sales_Contract__r.Service_Charge__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Service Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>