objects/SiteContracts__c/fields/SC_Standard_Reactive_Call_Out_Charge_OOH__c.field-meta.xml
<CustomField>
    <fullName>SC_Standard_Reactive_Call_Out_Charge_OOH__c</fullName>
    <description>Service Charge Standard Reactive Call Out Charge OOH</description>
    <formula>IF( Standard_Reactive_Call_Out_Charge_OOH__c &lt;&gt; NULL, Standard_Reactive_Call_Out_Charge_OOH__c, Sales_Contract__r.Standard_Reactive_Call_Out_Charge_OOH__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SC Standard Reactive Call Out Charge OOH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>