objects/SiteContracts__c/fields/Second_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Second_Visit_Date__c</fullName>
    <formula>IF ( TEXT(Next_Planned_Fire_Extinguisher_Visit__c)  &lt;&gt; &quot;&quot;, 
Next_Planned_Fire_Extinguisher_Visit__c +  IF( Number_of_Services__c &lt;&gt; 0,( 365 / Number_of_Services__c ), 0 ) 
, IF (  TEXT(Last_Completed_Visit__c) &lt;&gt; &quot;&quot;, Last_Completed_Visit__c + 2 *(( 365 / Number_of_Services__c )) , NULL ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>All of these require a number of services to work correctly. Second Visit is the first visit + 365/number of services.</inlineHelpText>
    <label>Second Visit Date</label>
    <type>Date</type>
</CustomField>