objects/SiteContracts__c/fields/Service_Charge__c.field-meta.xml
<CustomField>
    <fullName>Service_Charge__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is the Service Charge per visit for this service type applied to all opportunities, unless stated otherwise in the pricing notes field. If you do not know what the service charge is, enter 0.00.</inlineHelpText>
    <label>Service  Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>