objects/SiteContracts__c/fields/Service_Notes_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes_2__c</fullName>
    <inlineHelpText>Service_Notes_2</inlineHelpText>
    <label>Service Notes 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>