objects/SiteContracts__c/fields/SERVICE_NOTES__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_NOTES__c</fullName>
    <inlineHelpText>SERVICE_NOTES</inlineHelpText>
    <label>SERVICE NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>