objects/SiteContracts__c/fields/SHOCK_SENSORS__c.field-meta.xml
<CustomField>
    <fullName>SHOCK_SENSORS__c</fullName>
    <label>SHOCK SENSORS</label>
    <length>100</length>
    <type>Text</type>
</CustomField>