objects/SiteContracts__c/fields/Short__c.field-meta.xml
<CustomField>
    <fullName>Short__c</fullName>
    <label>Short ( DO NOT USE )</label>
    <length>100</length>
    <type>Text</type>
</CustomField>