objects/SiteContracts__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer / Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Site Contracts</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>