objects/SiteContracts__c/fields/Site_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_1__c</fullName>
    <description>Not used in layout(Using for Data migration)</description>
    <label>Site Address 1</label>
    <type>TextArea</type>
</CustomField>