objects/SiteContracts__c/fields/Site_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Site_Address_3__c</fullName>
    <description>Not used in layout(Using for data migration)</description>
    <label>Site Address 3</label>
    <type>TextArea</type>
</CustomField>