objects/SiteContracts__c/fields/Site_Contract_Additional_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Site_Contract_Additional_Instructions__c</fullName>
    <description>Site Contract Additional Instructions</description>
    <inlineHelpText>Site Contract Additional Instructions</inlineHelpText>
    <label>Site Contract Additional Instructions</label>
    <type>TextArea</type>
</CustomField>