objects/SiteContracts__c/fields/Site_Country__c.field-meta.xml
<CustomField>
    <fullName>Site_Country__c</fullName>
    <description>Not Used in layout(using for data migration)</description>
    <label>Site Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>