objects/SiteContracts__c/fields/site_name_for_Sharing__c.field-meta.xml
<CustomField>
    <fullName>site_name_for_Sharing__c</fullName>
    <formula>Site__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>site name for Sharing</label>
    <type>Text</type>
</CustomField>