objects/SiteContracts__c/fields/Site_Post_Code_Testing__c.field-meta.xml
<CustomField>
    <fullName>Site_Post_Code_Testing__c</fullName>
    <formula>IF ( PR_POST_CODE__c = Site__r.ShippingPostalCode, &quot;1&quot;,Site__r.ShippingPostalCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site (Account) Post Code Testing</label>
    <type>Text</type>
</CustomField>