objects/SiteContracts__c/fields/Site_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Postal_Code__c</fullName>
    <description>Not Used in layout(using for data migration)</description>
    <label>Site Postal Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>