objects/SiteContracts__c/fields/Site_Postcode_Area__c.field-meta.xml
<CustomField>
    <fullName>Site_Postcode_Area__c</fullName>
    <formula>TRIM(MID( Site__r.Postcode_Area__c ,1,find(&quot; &quot;,Site__r.Postcode_Area__c,1)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Postcode Prefix</label>
    <type>Text</type>
</CustomField>