objects/SiteContracts__c/fields/Site_Specific_Comments__c.field-meta.xml
<CustomField>
    <fullName>Site_Specific_Comments__c</fullName>
    <description>Site Specific Comments</description>
    <label>Site Contract Technician Instructions</label>
    <type>TextArea</type>
</CustomField>