objects/SiteContracts__c/fields/Site_State__c.field-meta.xml
<CustomField>
    <fullName>Site_State__c</fullName>
    <description>Not Used in layout(using for data migration)</description>
    <label>Site State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>