objects/SiteContracts__c/fields/Siteid__c.field-meta.xml
<CustomField>
    <fullName>Siteid__c</fullName>
    <formula>Site__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SiteId</label>
    <type>Text</type>
</CustomField>