objects/SiteContracts__c/fields/Specific_Day__c.field-meta.xml
<CustomField>
    <fullName>Specific_Day__c</fullName>
    <inlineHelpText>If this must be on a specific day or at a specific time, please enter this data here and it will appear on a visit in the booking status as a prompt for the scheduler. If this field is NOT BLANK, it will appear ( so don&apos;t write &quot;No&quot; :-) )</inlineHelpText>
    <label>Specific Day/Time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>