objects/SiteContracts__c/fields/Spend_Limit__c.field-meta.xml
<CustomField>
    <fullName>Spend_Limit__c</fullName>
    <label>Spend Limit</label>
    <length>50</length>
    <type>Text</type>
</CustomField>