objects/SiteContracts__c/fields/SPR_Head_Pri__c.field-meta.xml
<CustomField>
    <fullName>SPR_Head_Pri__c</fullName>
    <label>SPR Head Pri</label>
    <length>100</length>
    <type>Text</type>
</CustomField>