objects/SiteContracts__c/fields/SPR_Head_Sec__c.field-meta.xml
<CustomField>
    <fullName>SPR_Head_Sec__c</fullName>
    <label>SPR Head Sec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>