objects/SiteContracts__c/fields/SPR_Head_Tertiary__c.field-meta.xml
<CustomField>
    <fullName>SPR_Head_Tertiary__c</fullName>
    <label>SPR Head Tertiary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>