objects/SiteContracts__c/fields/Standard_Reactive_Call_Out_Charge_OOH__c.field-meta.xml
<CustomField>
    <fullName>Standard_Reactive_Call_Out_Charge_OOH__c</fullName>
    <inlineHelpText>Call Out Charge Out of Hours for just turning up.</inlineHelpText>
    <label>Standard Reactive Call Out Charge OOH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>