objects/SiteContracts__c/fields/STD_Call_Point__c.field-meta.xml
<CustomField>
    <fullName>STD_Call_Point__c</fullName>
    <label>STD Call Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>