objects/SiteContracts__c/fields/STD_Call_Point_QTY__c.field-meta.xml
<CustomField>
    <fullName>STD_Call_Point_QTY__c</fullName>
    <label>STD Call Point QTY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>