objects/SiteContracts__c/fields/Sys_Serial_No__c.field-meta.xml
<CustomField>
    <fullName>Sys_Serial_No__c</fullName>
    <label>Sys Serial No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>