objects/SiteContracts__c/fields/SYSTEM_NOTES__c.field-meta.xml
<CustomField>
    <fullName>SYSTEM_NOTES__c</fullName>
    <label>SYSTEM NOTES</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>