objects/SiteContracts__c/fields/Tank__c.field-meta.xml
<CustomField>
    <fullName>Tank__c</fullName>
    <label>Tank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>