objects/SiteContracts__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If a specific technician services this customer, please enter them here.</inlineHelpText>
    <label>Lead Technician</label>
    <referenceTo>Engineer__c</referenceTo>
    <relationshipLabel>Site Contracts worked by this Technician</relationshipLabel>
    <relationshipName>Site_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>