objects/SiteContracts__c/fields/TELEPHONE_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>TELEPHONE_NUMBER__c</fullName>
    <label>Telephone Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>