objects/SiteContracts__c/fields/Third_Visit_Date__c.field-meta.xml
<CustomField>
    <fullName>Third_Visit_Date__c</fullName>
    <formula>If ( TEXT(Second_Visit_Date__c)  &lt;&gt; &quot;&quot;, Second_Visit_Date__c + ( 365 / Number_of_Services__c ),NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Third Visit Date</label>
    <type>Date</type>
</CustomField>